// Copyright 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package google.cloud.crypto.tink;

option java_package = "com.google.cloud.crypto.tink";
option java_outer_classname = "GcpKmsProto";

message GcpKmsAeadParams {
}

// key_type: type.googleapis.com/google.cloud.crypto.tink.GcpKmsAeadKey
message GcpKmsAeadKey {
  int32 version = 1;
  GcpKmsAeadParams params = 2;
  // Required.
  // The location of a CryptoKey in Google Cloud KMS.
  // Valid values have this format: projects/*/locations/*/keyRings/*/cryptoKeys/*.
  // See https://cloud.google.com/kms/docs/object-hierarchy.
  // Note that to enable key rotation, this value should point to a CryptoKey,
  // not a CryptoKeyVersion.
  string kms_key_uri = 3;
}

message GcpKmsAeadKeyFormat {
  GcpKmsAeadParams params = 1;
}
